7179383: MaxDirectMemorySize argument parsing is broken for values >2G

Change hotspot flag to be unsigned

Reviewed-by: dholmes, sla, fparain, brutisso